Adds fix for origin and destination overriding list (#420)
* adds fix for origin and destination overriding list

* fixed test method name

* fixed up test